--- a/27.md
+++ b/27.md
@@ -1,175 +1,78 @@
+```python
+ ASSIGNMENT
+# 1: Create a Dictionary
+person = {"Name": "Alice", "Age": 25, "City": "New York"}
+print(person)
 
+# 2: Access Dictionary Elements
+print(person["City"])
 
-### Exercise 1: Create a Dictionary
-1. Create a dictionary called `person` with the following key-value pairs:
-   - Name: "Alice"
-   - Age: 25
-   - City: "New York"
-2. Print the dictionary.
+# 3: Add and Modify Elements
+person["email"] = "alice@example.com"
+person["Age"] = 26
+print(person)
 
-### Exercise 2: Access Dictionary Elements
-C.
-2. Access the value of the `"City"` key and print it.
+# 4: Remove Elements
+person.pop("City")
+print(person)
 
-### Exercise 3: Add and Modify Elements
-1. Add a new key-value pair to the `person` dictionary: `"email": "alice@example.com"`.
-2. Change the value of the `"Age"` key to 26.
-3. Print the modified dictionary.
+# 5: Check if a Key Exists
+if "email" in person:
+    print("The key 'email' exists in the dictionary.")
+else:
+    print("The key 'email' does not exist in the dictionary.")
 
-### Exercise 4: Remove Elements
-1. Remove the `"City"` key from the `person` dictionary.
-2. Print the dictionary after removing the key.
+if "phone" in person:
+    print("The key 'phone' exists in the dictionary.")
+else:
+    print("The key 'phone' does not exist in the dictionary.")
 
-### Exercise 5: Check if a Key Exists
-1. Check if the key `"email"` exists in the `person` dictionary. Print a message based on the result.
-2. Check if the key `"phone"` exists in the dictionary. Print a message based on the result.
+# 6: Check if a Key Exists (This is a repeat, keeping it the same as Exercise 5)
+if "email" in person:
+    print("The key 'email' exists in the dictionary.")
+else:
+    print("The key 'email' does not exist in the dictionary.")
 
-### Exercise 6:  Loop Through a Dictionary
-1. Iterate over the person dictionary and print each key-value pair.
-2. Iterate over the keys of the dictionary and print each key.
-3. Iterate over the values of the dictionary and print each value.
+if "phone" in person:
+    print("The key 'phone' exists in the dictionary.")
+else:
+    print("The key 'phone' does not exist in the dictionary.")
 
-### Exercise 7: Nested Dictionary
-1. Create a dictionary called `employees` where the keys are employee IDs (`101`, `102`, `103`) and the values are dictionaries containing employee details (like name and job title). Example structure:
-   ```python
-   employees = {
-       101: {"name": "Bob", "job": "Engineer"},
-       102: {"name": "Sue", "job": "Designer"},
-       103: {"name": "Tom", "job": "Manager"}
-   }
-   ```
-2. Print the details of employee with ID `102`.
-3. Add a new employee with ID `104`, name `"Linda"`, and job `"HR"`.
-4. Print the updated dictionary.
+# 7: Nested Dictionary
+employees = {
+    101: {"name": "Bob", "job": "Engineer"},
+    102: {"name": "Sue", "job": "Designer"},
+    103: {"name": "Tom", "job": "Manager"}
+}
+print(employees[102])
 
-### Exercise 8: Dictionary Comprehension
-1. Create a dictionary comprehension that generates a dictionary where the keys are numbers from 1 to 5 and the values are the squares of the keys.
-2. Print the generated dictionary.
+employees[104] = {"name": "Linda", "job": "HR"}
+print(employees)
 
-### Exercise 9: Merge Two Dictionaries
-1. Create two dictionaries:
-   ```python
-   dict1 = {"a": 1, "b": 2}
-   dict2 = {"c": 3, "d": 4}
-   ```
-2. Merge `dict2` into `dict1` and print the result.
+# 8: Dictionary Comprehension
+squares = {num: num ** 2 for num in range(1, 6)}
+print(squares)
 
-### Exercise 10: Default Dictionary Values
-1. Create a dictionary that maps letters to numbers: `{"a": 1, "b": 2, "c": 3}`.
-2. Use the `get()` method to retrieve the value of key `"b"`.
-3. Use the `get()` method to try to retrieve the value of a non-existing key `"d"`, but provide a default value of `0` if the key is not found.
+# 9: Merge Two Dictionaries
+dict1 = {"a": 1, "b": 2}
+dict2 = {"c": 3, "d": 4}
+dict1.update(dict2)
+print(dict1)
 
-### Exercise 11: Dictionary from Two Lists
-1. Given two lists:
-   ```python
-   keys = ["name", "age", "city"]
-   values = ["Eve", 29, "San Francisco"]
-   ```
-2. Create a dictionary by pairing corresponding elements from the `keys` and `values` lists.
-3. Print the resulting dictionary.
+# 10: Default Dictionary Values
+letters_to_numbers = {"a": 1, "b": 2, "c": 3}
+print(letters_to_numbers.get("b"))  # Retrieves the value of key "b"
+print(letters_to_numbers.get("d", 0))  # Returns 0 if the key "d" is not found
 
-### Exercise 12: Count Occurrences of Words
-1. Write a Python program that takes a sentence as input and returns a dictionary that counts the occurrences of each word in the sentence.
-   ```python
-   sentence = "the quick brown fox jumps over the lazy dog the fox"
-   ```
-2. Print the dictionary showing word counts.
+# 11: Dictionary from Two Lists
+keys = ["name", "age", "city"]
+values = ["Eve", 29, "San Francisco"]
+combined_dict = dict(zip(keys, values))
+print(combined_dict)
 
-1
-​
-2
-### Exercise 1: Create a Dictionary
-3
-1. Create a dictionary called `person` with the following key-value pairs:
-4
-   - Name: "Alice"
-5
-   - Age: 25
-6
-   - City: "New York"
-7
-2. Print the dictionary.
-8
-​
-9
-### Exercise 2: Access Dictionary Elements
-10
-C.
-11
-2. Access the value of the `"City"` key and print it.
-12
-​
-13
-### Exercise 3: Add and Modify Elements
-14
-1. Add a new key-value pair to the `person` dictionary: `"email": "alice@example.com"`.
-15
-2. Change the value of the `"Age"` key to 26.
-16
-3. Print the modified dictionary.
-17
-​
-18
-### Exercise 4: Remove Elements
-19
-1. Remove the `"City"` key from the `person` dictionary.
-20
-2. Print the dictionary after removing the key.
-21
-​
-22
-### Exercise 5: Check if a Key Exists
-23
-1. Check if the key `"email"` exists in the `person` dictionary. Print a message based on the result.
-24
-2. Check if the key `"phone"` exists in the dictionary. Print a message based on the result.
-25
-​
-26
-### Exercise 6:  Loop Through a Dictionary
-27
-1. Iterate over the person dictionary and print each key-value pair.
-28
-2. Iterate over the keys of the dictionary and print each key.
-29
-3. Iterate over the values of the dictionary and print each value.
-30
-​
-31
-### Exercise 7: Nested Dictionary
-32
-1. Create a dictionary called `employees` where the keys are employee IDs (`101`, `102`, `103`) and the values are dictionaries containing employee details (like name and job title). Example structure:
-33
-   ```python
-34
-   employees = {
-35
-       101: {"name": "Bob", "job": "Engineer"},
-36
-       102: {"name": "Sue", "job": "Designer"},
-37
-       103: {"name": "Tom", "job": "Manager"}
-38
-   }
-39
-   ```
-40
-2. Print the details of employee with ID `102`.
-41
-3. Add a new employee with ID `104`, name `"Linda"`, and job `"HR"`.
-42
-4. Print the updated dictionary.
-43
-​
-44
-### Exercise 8: Dictionary Comprehension
-45
-1. Create a dictionary comprehension that generates a dictionary where the keys are numbers from 1 to 5 and the values are the squares of the keys.
-46
-2. Print the generated dictionary.
-47
-​
-
-
-
-
+# 12: Count Occurrences of Words
+sentence = "the quick brown fox jumps over the lazy dog the fox"
+words = sentence.split()
+word_count = {word: words.count(word) for word in words}
+print(word_count)
+```
